# school

./: CMakeLists.txt
include/: building_manager.hpp  command_window.hpp  common.hpp  cursor.hpp  display.hpp  game.hpp  io.hpp  map.hpp  map_renderer.hpp  message_window.hpp  renderer.hpp  resource_bar.hpp  status_window.hpp  terrain_manager.hpp  unit_manager.hpp
include/core/: entity.hpp  game.hpp  io.hpp  map.hpp  selection.hpp
include/entity/: building.hpp  combat_unit_ai.hpp  combat_unit_state.hpp  harvester_ai.hpp  harvester_state.hpp  sandworm_ai.hpp  sandworm_state.hpp  terrain.hpp  unit.hpp
include/managers/: building_manager.hpp  entity_manager.hpp  terrain_manager.hpp  unit_manager.hpp
include/spatial/: quad_tree.hpp
include/ui/: cursor.hpp  display.hpp  renderer.hpp
src/: CMakeLists.txt  building_manager.cpp  command_window.cpp  cursor.cpp  display.cpp  engine.cpp  game.cpp  io.cpp  map.cpp  map_renderer.cpp  message_window.cpp  renderer.cpp  resource_bar.cpp  status_window.cpp  terrain_manager.cpp  unit_manager.cpp
src/core/: engine.cpp  game.cpp  io.cpp  map.cpp
src/entity/: building.cpp  combat_unit_ai.cpp  combat_unit_state.cpp  harvester_ai.cpp  harvester_state.cpp  sandworm_ai.cpp  sandworm_state.cpp  terrain.cpp  unit.cpp
src/managers/: building_manager.cpp  terrain_manager.cpp  unit_manager.cpp
src/spatial/: quad_tree.cpp
src/ui/: cursor.cpp  display.cpp
src/ui/window/: base_window.cpp  command_window.cpp  map_renderer.cpp  message_window.cpp  renderer.cpp  resource_bar.cpp  status_window.cpp
src/utils/: utils.cpp
(+10 files in other folders)
